Sun Jul 10 16:21:29 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Error_Documentation/index.html:

          Fuzz.

Thu Jul  7 20:38:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Configuration/Process_Name.cpp:

          Updated to address a glibc error in some Linux distributions.

Thu Jun 30 10:36:59 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Error_Documentation:
        * docs/Error_Documentation/Checked.png:
        * docs/Error_Documentation/Collapsed.png:
        * docs/Error_Documentation/Expanded.png:
        * docs/Error_Documentation/LeafRowHandle.png:
        * docs/Error_Documentation/Mixed.png:
        * docs/Error_Documentation/Unchecked.png:
        * docs/Error_Documentation/blank.png:
        * docs/Error_Documentation/index.html:
        * docs/Error_Documentation/outliner.js:

          Updated error documentation.

        * docs/sources/Error_Documentation.oo3:
        * docs/sources/Error_Documentation.oo3/contents.xml:

          Source document for the error documentation.

        * docs/Error_Messages.txt:

          Removed this file.

Thu Jun 23 12:39:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Disable html help, seems doxygen now disables the search option
          when html help is enabled

Thu Jun 23 13:46:08 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.0.3 released.

Tue Jun  7 21:18:05 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * tests/Plan_Launcher/EM-Delay/run_test_ns.pl:

          Rework the plan launcher options a bit.  --em-ior is back to requiring an
          argument, if no --{em,nm,lm}-ior option is specified, we default to
          name service lookup.

Fri Jun  3 12:07:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dance_tests.lst: